# hw_10_django

./: README.md  docker-compose.yaml  manage.py  pyproject.toml
hw_10_django/: asgi.py  settings.py  urls.py  wsgi.py
toscrape_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
toscrape_app/migrations/: 0001_initial.py
toscrape_app/templates/toscrape_app/: author_detail.html  authors.html  index.html  quotes.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
utils/: authors.json  seed.py
