[tool.poetry]
name = "hw-10-django"
version = "0.1.0"
description = ""
authors = ["chabanchuk <145770156+chabanchuk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
